--- a/bootstraoworks/bootstrapnavbar.html
+++ b/bootstraoworks/bootstrapnavbar.html
@@ -138,7 +138,7 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header">i
         <h5 class="modal-title " id="exampleModalLabel" style="margin-left: 100px;">Get Training Quote for free </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
